--- a/index.html
+++ b/index.html
@@ -23,36 +23,12 @@
   </nav>
 
   <div class="container">
-    <!-- <form class="verify-form">
-      <input type="text" id="verify-input" placeholder="Employee Name" autocomplete="off" />
-      <button id="verify">Verify</button>
-    </form> --> 
-    <!-- <form class="lookup-form box">
-      <input type="text" id="lookup-input" placeholder="Employee Name" autocomplete="off" />
-      <button id="lookup">Lookup</button>
-    </form>
-    <form class="contains-form box">
-      <input type="text" id="contains-input" placeholder="Employee Name" autocomplete="off" />
-      <button id="contains">Contains</button>
-    </form>
-    <form class="update-form box">
-      <input type="text" id="update-input" placeholder="Employee Name" autocomplete="off" />
-      <input type="text" id="update-input" placeholder="Office Number" autocomplete="off" />
-      <input type="text" id="update-input" placeholder="Phone Number" autocomplete="off" />
-      <button id="update">Update</button>
-    </form>
-    <form class="add-form box">
-      <input type="text" id="add-input" placeholder="Employee Name" autocomplete="off" />
-      <input type="text" id="add-input" placeholder="Office Number" autocomplete="off" />
-      <input type="text" id="add-input" placeholder="Phone Number" autocomplete="off" />
-      <button id="add">Add</button>
-    </form>
-    <form class="delete-form box">
-      <input type="text" id="delete-input" placeholder="Employee Name" autocomplete="off" />
-      <button id="delete">Delete</button>
-    </form> -->
 
-    <div id="results">
+    <div class="results">
+    </div>
+    <div class="results-verify">
+    </div>
+    <div class="results-display">
     </div>
   </div>
 
